force-app/main/default/objects/Quote/fields/Agreement_Value_w_o_Tax__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Value_w_o_Tax__c</fullName>
    <formula>IF( AND(ISBLANK(Approved_Discount__c) , ISBLANK(Subvention_Cost__c)) , Agreement_Value__c , (Agreement_Value__c - Approved_Discount__c + Subvention_Cost__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agreement Value(w/o Tax)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>