force-app/main/default/objects/Quote/fields/Agreement_Value_with_GST__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Value_with_GST__c</fullName>
    <formula>(1+ (2/3 * GST__c))* Agreement_Value_w_o_Tax__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agreement Value with GST</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>