force-app/main/default/objects/Quote/fields/Approved_Discount__c.field-meta.xml
<CustomField>
    <fullName>Approved_Discount__c</fullName>
    <label>Approved Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>