force-app/main/default/objects/Quote/fields/Appt__c.field-meta.xml
<CustomField>
    <fullName>Appt__c</fullName>
    <label>Appt #</label>
    <length>20</length>
    <type>Text</type>
</CustomField>