force-app/main/default/objects/Quote/fields/Backend_Second_booking__c.field-meta.xml
<CustomField>
    <fullName>Backend_Second_booking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Backend Second booking</label>
    <type>Checkbox</type>
</CustomField>