force-app/main/default/objects/Quote/fields/Basic_Rate__c.field-meta.xml
<CustomField>
    <fullName>Basic_Rate__c</fullName>
    <label>Basic Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>