force-app/main/default/objects/Quote/fields/Design_Style__c.field-meta.xml
<CustomField>
    <fullName>Design_Style__c</fullName>
    <label>Design Style</label>
    <length>255</length>
    <type>Text</type>
</CustomField>