force-app/main/default/objects/Quote/fields/Flat_Category__c.field-meta.xml
<CustomField>
    <fullName>Flat_Category__c</fullName>
    <label>Flat Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2 BHK Nest</fullName>
            </value>
            <value>
                <fullName>2 BHK Haven</fullName>
            </value>
            <value>
                <fullName>4.5 BHK</fullName>
            </value>
            <value>
                <fullName>3 BHK</fullName>
            </value>
            <value>
                <fullName>4 BHK</fullName>
            </value>
            <value>
                <fullName>Duplex</fullName>
            </value>
            <value>
                <fullName>Penthouse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>