force-app/main/default/objects/Quote/fields/Gross_Total__c.field-meta.xml
<CustomField>
    <fullName>Gross_Total__c</fullName>
    <label>Gross Total</label>
    <summarizedField>QuoteLineItem.Gross_Total__c</summarizedField>
    <summaryFilterItems>
        <field>QuoteLineItem.Excluded__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>