force-app/main/default/objects/Quote/fields/Inventory_Type__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Type__c</fullName>
    <label>Inventory Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>