force-app/main/default/objects/Quote/fields/Other_Charges__c.field-meta.xml
<CustomField>
    <fullName>Other_Charges__c</fullName>
    <label>Other Charges</label>
    <summarizedField>QuoteLineItem.Sub_Total__c</summarizedField>
    <summaryFilterItems>
        <field>QuoteLineItem.Unit_No__c</field>
        <operation>lessThan</operation>
        <value>3</value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>