force-app/main/default/objects/Quote/fields/Other_Charges_For_GST__c.field-meta.xml
<CustomField>
    <fullName>Other_Charges_For_GST__c</fullName>
    <description>Other Charges for GST calculation on Pricesheet</description>
    <label>Other Charges For GST</label>
    <summarizedField>QuoteLineItem.GST_on_Other_Charges2__c</summarizedField>
    <summaryFilterItems>
        <field>QuoteLineItem.Unit_No__c</field>
        <operation>lessThan</operation>
        <value>3</value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>