force-app/main/default/objects/Quote/fields/Possession_Charges_GST_included__c.field-meta.xml
<CustomField>
    <fullName>Possession_Charges_GST_included__c</fullName>
    <label>Possession Charges(GST included)</label>
    <summarizedField>QuoteLineItem.Possession_Charges_GST_Included__c</summarizedField>
    <summaryFilterItems>
        <field>QuoteLineItem.Excluded__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>