force-app/main/default/objects/Quote/fields/Product_Saleable__c.field-meta.xml
<CustomField>
    <fullName>Product_Saleable__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product_Saleable</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>