force-app/main/default/objects/Quote/fields/Registration__c.field-meta.xml
<CustomField>
    <fullName>Registration__c</fullName>
    <label>Registration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>