force-app/main/default/objects/Quote/fields/Require_Discount__c.field-meta.xml
<CustomField>
    <fullName>Require_Discount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Require Discount?</label>
    <type>Checkbox</type>
</CustomField>