force-app/main/default/objects/Quote/fields/Salable_Price_Total__c.field-meta.xml
<CustomField>
    <fullName>Salable_Price_Total__c</fullName>
    <label>Salable Price Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>