force-app/main/default/objects/Quote/fields/Send_Inventory_Available_Notification__c.field-meta.xml
<CustomField>
    <fullName>Send_Inventory_Available_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Inventory Available Notification</label>
    <type>Checkbox</type>
</CustomField>