force-app/main/default/objects/Quote/fields/Stamp_Duty__c.field-meta.xml
<CustomField>
    <fullName>Stamp_Duty__c</fullName>
    <label>Stamp Duty</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>