force-app/main/default/objects/Quote/fields/Subvention_Cost__c.field-meta.xml
<CustomField>
    <fullName>Subvention_Cost__c</fullName>
    <label>Subvention Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>