force-app/main/default/objects/Quote/fields/Total_Amount_without_Tax__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_without_Tax__c</fullName>
    <label>Total Amount without Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>