force-app/main/default/objects/Quote/fields/Unit_Cost_With_Discount__c.field-meta.xml
<CustomField>
    <fullName>Unit_Cost_With_Discount__c</fullName>
    <formula>Unit_Cost__c -  Approved_Discount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>