force-app/main/default/objects/Quote/fields/Unit_Status__c.field-meta.xml
<CustomField>
    <fullName>Unit_Status__c</fullName>
    <formula>TEXT(Product_Saleable__r.Unit_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Status</label>
    <type>Text</type>
</CustomField>