force-app/main/default/objects/Quote/validationRules/cannot_sync_without_accepting_the_quote.validationRule-meta.xml
<ValidationRule>
    <fullName>cannot_sync_without_accepting_the_quote</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(IsPickval(Status , &apos;Accepted&apos;)),NOT(IsPickval(Status , &apos;Denied&apos;)), (IsSyncing = True))</errorConditionFormula>
    <errorMessage>Please accept the quote before syncing</errorMessage>
</ValidationRule>