force-app/main/default/objects/Quote/validationRules/Check_Max_Quote_Count.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Max_Quote_Count</fullName>
    <active>false</active>
    <errorConditionFormula>Opportunity.Max_Quote__c &gt; 2 &amp;&amp;  $Profile.Name != &apos;System Administrator&apos;</errorConditionFormula>
    <errorMessage>Only two Quotes can be created related to one Opportunity in a day.</errorMessage>
</ValidationRule>