force-app/main/default/objects/Quote/validationRules/Check_Second_Booking.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Second_Booking</fullName>
    <active>false</active>
    <errorConditionFormula>Backend_Second_booking__c = true</errorConditionFormula>
    <errorMessage>This is a second booking. You cannot create quotes for this Opportunity</errorMessage>
</ValidationRule>