force-app/main/default/objects/Quote/validationRules/Discount_Can_not_Exceed_15_Lakhs.validationRule-meta.xml
<ValidationRule>
    <fullName>Discount_Can_not_Exceed_15_Lakhs</fullName>
    <active>true</active>
    <errorConditionFormula>Discount__c &gt; 3000000</errorConditionFormula>
    <errorDisplayField>Discount__c</errorDisplayField>
    <errorMessage>Discount Amount Can not Exceed 30 Lakhs.</errorMessage>
</ValidationRule>