force-app/main/default/objects/Quote/validationRules/Product_in_Hold_for_other_customer_Error.validationRule-meta.xml
<ValidationRule>
    <fullName>Product_in_Hold_for_other_customer_Error</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED( Status ) &amp;&amp;  ISPICKVAL(Status , &apos;Accepted&apos;) &amp;&amp; NOT(CONTAINS(TEXT(Product_Saleable__r.Unit_Status__c), &apos;Available&apos;)) &amp;&amp; NOT(CONTAINS(TEXT(Product_Saleable__r.Unit_Status__c), &apos;AFS&apos;))</errorConditionFormula>
    <errorMessage>Cannot Change Quote Status to Accepted if the Inventory selected is not Available</errorMessage>
</ValidationRule>