force-app/main/default/objects/Quote/validationRules/Quote_Already_synced_and_accepted.validationRule-meta.xml
<ValidationRule>
    <fullName>Quote_Already_synced_and_accepted</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(IsSyncing ) &amp;&amp; IsSyncing &amp;&amp;  Opportunity.Quote_Accepted__c</errorConditionFormula>
    <errorMessage>Cannot sync a new Quote to an Opportunity having synced accepted Quote</errorMessage>
</ValidationRule>